tests/test133.rael.exp
Error [tests/test133.rael:1:17]: Invalid range for slicing
| log "string" at (3 to 1)
|                 ^
